# v1.0.2 - ???
Additions
1. Added a ds_str_chsubst function for substituting characters in a string.

Bugfixes
1. ds_hmap_keys() now returns zero on error.
